# balena-multi-container-telemetry

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: main.yml
config/: .gitignore  balena_stats_collector.example-config.json  log4rs.yaml
cross-compile/: Dockerfile  docker-compose.yaml
default-config/: balena_stats_collector.config.json  log4rs.yaml  mqtt.config.json
src/: domain.rs  main.rs
src/collectors/: balena_stats_cli_stdout_collector.rs  balena_stats_collector.rs  balena_stats_collector_config.rs  balena_stats_file_collector.rs  mod.rs  raw_stats_to_json_str.rs
src/exporters/: mqtt.rs
src/parsers/: balena_stats_json_parsers.rs  mod.rs
src/util/: config.rs
test-data/: balena_stats_example.json  balena_stats_stdout.json  balena_stats_stdout.txt
test-data/config/: mqtt.config.json
