[package]
name = "balena-multi-container-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
byte-unit = "5.1"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.3"
paho-mqtt = { version = "0.13", features = ["bundled"] }
rstest = "0.25.0"
serde_json = "1.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
